# client-to-bim

./: citation.bib  citation.cff  contributing.md  environment.yml  index.html  mlm-pretrain.py  pyproject.toml  readme.md  requirements.txt  robots.txt  sitemap.xml
weights/: readme.md
